Commit changes since October; thanks to Shangdi Yu for helping prepare this version.

--- a/in_memory/clustering/BUILD
+++ b/in_memory/clustering/BUILD
@@ -15,7 +15,9 @@
 load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 
-package(default_visibility = ["//visibility:public"])
+package(
+    default_visibility = ["//visibility:public"],
+)
 
 licenses(["notice"])
 
@@ -152,6 +154,7 @@ cc_library(
         "//in_memory/connected_components:asynchronous_union_find",
         "@com_google_absl//absl/log:absl_check",
         "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
     ],
 )
 
