--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -9,7 +9,7 @@ load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 git_repository(
     name = "com_google_absl",
     remote = "https://github.com/abseil/abseil-cpp.git",
-    tag = "20230125.2",
+    tag = "20240116.1",
 )
 
 http_archive(
@@ -50,4 +50,15 @@ git_repository(
     remote = "https://github.com/ParAlg/parlaylib.git",
     commit = "6b4a4cdbfeb3c481608a42db0230eb6ebb87bf8d",
     strip_prefix = "include/",
+)
+
+http_archive(
+    name = "eigen",
+    build_file = "//similarity:eigen.BUILD",
+    sha256 = "ca7beac153d4059c02c8fc59816c82d54ea47fe58365e8aded4082ded0b820c4",
+    strip_prefix = "eigen-eigen-f3a22f35b044",
+    urls = [
+        "http://mirror.bazel.build/bitbucket.org/eigen/eigen/get/f3a22f35b044.tar.gz",
+        "https://bitbucket.org/eigen/eigen/get/f3a22f35b044.tar.gz",
+    ],
 )
