--- a/in_memory/clustering/affinity/BUILD
+++ b/in_memory/clustering/affinity/BUILD
@@ -12,8 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
-load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
+load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
+load("@com_google_protobuf//bazel:py_proto_library.bzl", "py_proto_library")
+
 load("//utils:build_defs.bzl", "graph_mining_cc_test")
 
 package(
@@ -137,7 +139,7 @@ cc_proto_library(
 
 py_proto_library(
     name = "dynamic_weight_threshold_py_pb2",
-    srcs = ["dynamic_weight_threshold.proto"],
+    deps = [":dynamic_weight_threshold_proto"],
 )
 
 cc_proto_library(
