--- a/.bazelrc
+++ b/.bazelrc
@@ -1,2 +1,2 @@
-# Use C++17.
-build --cxxopt=-std=c++17
+# Use C++20
+build --cxxopt=-std=c++20 --enable_workspace --incompatible_enable_proto_toolchain_resolution
