Update graph-mining library with FDE generation code.

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -64,7 +64,7 @@ git_repository(
 
 http_archive(
     name = "eigen",
-    build_file = "//similarity:eigen.BUILD",
+    build_file = "//utils:eigen.BUILD",
     sha256 = "ca7beac153d4059c02c8fc59816c82d54ea47fe58365e8aded4082ded0b820c4",
     strip_prefix = "eigen-eigen-f3a22f35b044",
     urls = [
